--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "porfolio",
   "version": "0.1.0",
+  "author": "Utku Çam",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -8,7 +9,8 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-scroll": "^1.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
